# rados-rs

./: .gitignore  AUTH_PROVIDER.md  BUG_VERIFICATION_REPORT.md  CEPHCONFIG_IMPLEMENTATION_SUMMARY.md  CEPHCONFIG_OPTION_DESIGN.md  CEPH_THROTTLING_ANALYSIS.md  CLAUDE.md  CLIENT_THROTTLE_IMPLEMENTATION.md  CLIENT_THROTTLE_OPTIONS.md  COMMIT_REWRITE_PLAN.md  COMPATIBILITY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CROSS_VALIDATION_RESULTS.md  CRUSH_DOC_GUIDE.md  Cargo.toml  DEPENDENCIES.md  DEVELOPMENT_NOTES.md  ENCODING_METADATA.md  ENCODING_SYSTEM_SUMMARY.md  FINAL_SUMMARY.md  FINAL_THROTTLE_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MACRO_SIMPLIFICATION_ANALYSIS.md  MESSAGE_FRAMEWORK_IMPLEMENTATION.md  MESSAGE_REVOCATION_ANALYSIS.md  MSGR2_ANALYSIS.md  MSGR2_OPTIMIZATION_AUDIT.txt  OBJECTER_COMPARISON.md  OSDMAP_CRUSH_INTEGRATION_SUMMARY.md  OSDMAP_DECODING_INVESTIGATION.md  PHASE1_COMPLETE.md  PHASE3_AUDIT.md  PHASE3_EXECUTIVE_SUMMARY.txt  PHASE3_IMPLEMENTATION_ROADMAP.txt  PHASE3_INDEX.md  PHASE3_QUICK_REFERENCE.txt  PHASE5_AUDIT.md  PHASE5_SUMMARY.md  (+33 more)
crates/auth/: Cargo.toml
crates/auth/examples/: test_corpus.rs
crates/auth/src/: client.rs  error.rs  keyring.rs  lib.rs  protocol.rs  provider.rs  server.rs  types.rs
crates/cephconfig/: Cargo.toml  QUICK_REFERENCE.md  README.md
crates/cephconfig/examples/: parse_config.rs
crates/cephconfig/src/: config.rs  lib.rs  types.rs
crates/crush/: Cargo.toml
crates/crush/benches/: crush_mapping.rs
crates/crush/examples/: test_crush_decode.rs  test_crush_ordering.rs
crates/crush/src/: bucket.rs  crush_ln_table.rs  decode.rs  error.rs  hash.rs  lib.rs  mapper.rs  placement.rs  types.rs
crates/denc/: CLAUDE.md  CORPUS.md  Cargo.toml  STATUS.md  TESTING.md  TODO.md  build.rs
crates/denc/benches/: denc_comparison.rs  encoding.rs  message_encoding.rs
crates/denc/examples/: test_entity_addr_corpus.rs  test_osdmap_decode.rs  test_osdmap_manual.rs
crates/denc/src/: ceph_crc32c.rs  codec.rs  codec_error.rs  collections.rs  crush_types.rs  denc.rs  denc_mut.rs  encoding_metadata.rs  entity_addr.rs  entity_addr_dencmut.rs  error.rs  features.rs  hobject.rs  ids.rs  lib.rs  macros.rs  monmap.rs  osdmap.rs  padding.rs  pg_nls_response.rs  pgmap_types.rs  primitives.rs  traits.rs  types.rs  zero_copy.rs  zerocopy.rs
crates/denc/tests/: collection_tests.rs  corpus_comparison_test.rs  corpus_test_all.sh  corpus_test_entity_addr.sh  integration_test.rs  monmap_test.rs  object_placement_test.rs  osdmap_crush_integration_test.rs  osdmap_test.rs  pg_merge_meta_test.rs  pg_merge_meta_validation.rs  pg_pool_test.rs  primitive_tests.rs  trait_tests.rs
crates/dencoder/: Cargo.toml
crates/dencoder/src/: corpus.rs  main.rs  registry.rs
crates/dencoder/tests/: corpus_comparison_test.rs
crates/monclient/: Cargo.toml
crates/monclient/examples/: async_wait.rs  connect_mon.rs  simple_test.rs  test_osdmap.rs  test_osdmap_decode.rs  test_osdmap_short.rs
crates/monclient/src/: auth_config.rs  ceph_message_impl.rs  client.rs  connection.rs  defaults.rs  dns_srv.rs  error.rs  lib.rs  messages.rs  monmap.rs  paxos_service_message.rs  subscription.rs  types.rs  wait_helper.rs
crates/monclient/tests/: command_operations.rs  pool_operations.rs
crates/msgr2/: Cargo.toml  README.md
crates/msgr2/benches/: connection.rs
crates/msgr2/examples/: compression_stats.rs  throttle_and_revocation.rs
crates/msgr2/src/: banner.rs  ceph_message.rs  compression.rs  crypto.rs  crypto.rs.bak  error.rs  frames.rs  header.rs  io_loop.rs  lib.rs  map_channel.rs  message.rs  message_bus.rs  messenger.rs  priority_queue.rs  protocol.rs  protocol.rs.bak  revocation.rs  split.rs  state_machine.rs  throttle.rs
crates/msgr2/tests/: ceph_config.rs  compression_integration.rs  connection_tests.rs  priority_queue_integration.rs  server_accept_test.rs  throttle_config_test.rs  throttle_integration_test.rs
crates/osdclient/: Cargo.toml  README.md  build.rs
crates/osdclient/benches/: concurrent.rs  operations.rs  placement.rs
crates/osdclient/examples/: simple_write.rs  test_list.rs  test_list_minimal.rs  test_list_simple.rs  test_list_with_objects.rs  test_ls.rs
crates/osdclient/src/: backoff.rs  ceph_crc32c.rs  ceph_message_impl.rs  client.rs  denc_types.rs  error.rs  ioctx.rs  lib.rs  list_stream.rs  lock.rs  messages.rs  object_io.rs  operation.rs  osdmap.rs  pg_nls_response.rs  pgmap_types.rs  session.rs  snapshot.rs  throttle.rs  tracker.rs  types.rs
crates/osdclient/tests/: debug_encoding.rs  integration_test.rs  object_io_test.rs  object_placement_test.rs  osdmap_crush_integration_test.rs  pg_merge_meta_test.rs  pg_merge_meta_validation.rs  pool_operations.rs  rados_operations.rs
crates/rados/: Cargo.toml
crates/rados/src/: main.rs
examples/: Cargo.toml  rados.rs
rados/: Cargo.toml  README.md  build.rs
rados/benches/: ab_concurrent.rs  ab_single_op.rs  concurrent.rs  connection.rs  crush_mapping.rs  encoding.rs  message_encoding.rs  operations.rs  placement.rs
rados/examples/: bench_resources.rs  cephconfig_parse_config.rs  crush_test_crush_decode.rs  crush_test_crush_ordering.rs  msgr2_throttle_and_revocation.rs  osdclient_simple_write.rs  osdclient_test_list.rs  osdclient_test_list_minimal.rs  osdclient_test_list_simple.rs  osdclient_test_list_with_objects.rs  osdclient_test_ls.rs  osdclient_test_osdmap_decode.rs
rados/src/: client.rs  lib.rs
rados/src/auth/: mod.rs  (+7 more)
rados/tests/: denc_integration_test.rs  dencoder_corpus_comparison_test.rs  monclient_command_operations.rs  msgr2_compression_integration.rs  msgr2_connection_tests.rs  msgr2_priority_queue_integration.rs  msgr2_server_accept_test.rs  msgr2_test_crc_equivalence.rs  msgr2_throttle_config_test.rs  msgr2_throttle_integration_test.rs  osdclient_integration_test.rs  osdclient_object_io_test.rs  osdclient_object_placement_test.rs  osdclient_osdmap_crush_integration_test.rs  osdclient_osdmap_test.rs  osdclient_pg_merge_meta_test.rs  osdclient_pg_merge_meta_validation.rs  osdclient_pool_operations.rs  osdclient_rados_operations.rs
(+175 files in other folders)
