[workspace]
members = ["crates/denc-macros", "crates/cephconfig", "crates/denc", "crates/auth"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
thiserror = "1.0"
bytes = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"
base64 = "0.21"
rand = "0.8"
tracing = "0.1"
