[workspace]
members = [
    "rados",
    "rados-denc-macros",
    "examples",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/tchaikov/rados-rs"
homepage = "https://github.com/tchaikov/rados-rs"

[workspace.dependencies]
thiserror = "1.0"
bytes = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"
base64 = "0.21"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
num_enum = "0.7"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
crc32c = "0.6"
crc-fast = "1.10"
hmac = "0.12"
sha2 = "0.10"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
