[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication protocols implementation for Ceph clusters"

[dependencies]
denc = { path = "../denc" }
bytes = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }

[lib]
name = "auth"
path = "src/lib.rs"