[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Authentication protocols implementation for Ceph clusters"

[dependencies]
denc = { path = "../denc" }
bytes = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }

[lib]
name = "auth"
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0"
