[package]
name = "cephconfig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ceph.conf parser for Ceph clients"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
