[package]
name = "crush"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
denc = { path = "../denc" }
num_enum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crush_mapping"
harness = false
