[package]
name = "denc"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
thiserror = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
denc-derive = { path = "../denc-derive" }

[dev-dependencies]
hex = "0.4"
glob = "0.3"
crush = { path = "../crush" }
osdclient = { path = "../osdclient" }