[package]
name = "dencoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dencoder"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

# Internal dependencies
denc = { path = "../denc" }
crush = { path = "../crush" }
osdclient = { path = "../osdclient" }
