[package]
name = "dencoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dencoder"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal dependencies
denc = { path = "../denc" }
crush = { path = "../crush" }
osdclient = { path = "../osdclient" }
