[package]
name = "dencoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ceph binary corpus decoder CLI"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "dencoder"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal dependencies
denc = { path = "../denc", version = "0.1.0" }
crush = { path = "../crush", version = "0.1.0" }
osdclient = { path = "../osdclient", version = "0.1.0" }
