[package]
name = "monclient"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = "1.0"
hostname = "0.3"
rand = { workspace = true }
futures = { workspace = true }

# Internal dependencies
msgr2 = { path = "../msgr2" }
auth = { path = "../auth" }
denc = { path = "../denc" }
hex = "0.4.3"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"
cephconfig = { path = "../cephconfig" }
rand = { workspace = true }
