[package]
name = "monclient"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = "0.3"
rand = { workspace = true }
futures = { workspace = true }
dashmap = "6.0"

# Internal dependencies
msgr2 = { path = "../msgr2" }
auth = { path = "../auth" }
denc = { path = "../denc" }
cephconfig = { path = "../cephconfig" }
hex = "0.4"

# DNS SRV resolution
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"
rand = { workspace = true }
