[package]
name = "msgr2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
denc = { path = "../denc" }
auth = { path = "../auth" }
cephconfig = { path = "../cephconfig" }
zerocopy = { version = "0.8", features = ["derive"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
crc32c = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
aes-gcm = "0.10"
hex = "0.4"
num_enum = { workspace = true }
snap = "1.1"
zstd = "0.13"
lz4 = "1.24"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3"
cephconfig = { path = "../cephconfig" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "connection"
harness = false

[lib]
name = "msgr2"
path = "src/lib.rs"
