[package]
name = "osdclient"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
crc32c = { workspace = true }
libc = "0.2"
zerocopy = { version = "0.8", features = ["derive"] }
dashmap = "5.5"

# Internal dependencies
msgr2 = { path = "../msgr2" }
auth = { path = "../auth" }
denc = { path = "../denc" }
monclient = { path = "../monclient" }
crush = { path = "../crush" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
cephconfig = { path = "../cephconfig" }
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "concurrent"
harness = false
