[package]
name = "osdclient"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
crc32c = { workspace = true }
libc = "0.2"
zerocopy = { version = "0.8", features = ["derive"] }
dashmap = "5.5"
lru = "0.12"

# Internal dependencies
msgr2 = { path = "../msgr2" }
auth = { path = "../auth" }
denc = { path = "../denc" }
monclient = { path = "../monclient" }
crush = { path = "../crush" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
cephconfig = { path = "../cephconfig" }
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
hex = "0.4"

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "placement"
harness = false
