[package]
name = "rados"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rados"
path = "src/main.rs"

[dependencies]
osdclient = { path = "../osdclient" }
monclient = { path = "../monclient" }
msgr2 = { path = "../msgr2" }
cephconfig = { path = "../cephconfig" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
