[package]
name = "rados"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rados"
path = "src/main.rs"

[dependencies]
osdclient = { path = "../osdclient" }
monclient = { path = "../monclient" }
msgr2 = { path = "../msgr2" }
cephconfig = { path = "../cephconfig" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
