[package]
name = "rados"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RADOS CLI for Ceph object operations"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "rados"
path = "src/main.rs"

[dependencies]
osdclient = { path = "../osdclient", version = "0.1.0" }
monclient = { path = "../monclient", version = "0.1.0" }
msgr2 = { path = "../msgr2", version = "0.1.0" }
cephconfig = { path = "../cephconfig", version = "0.1.0" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
